# Schoenemann

./: .gitignore  Makefile  README.md  datagen.bat  kill.bat
.github/workflows/: test-undefined.yml
Schoenemann/: .gitignore  Makefile  chess.hpp  consts.h  datagen.cpp  datagen.h  helper.cpp  helper.h  moveorder.cpp  moveorder.h  schoenemann.cpp  schoenemann.h  search.cpp  search.h  see.cpp  see.h  timeman.cpp  timeman.h  tt.cpp  tt.h  tune.cpp  tune.h  tuneconsts.cpp  tuneconsts.h
Schoenemann/NNUE/: nnueconstants.h  perspective.h  utils.h
movegen/: Makefile  attacks.cpp  attacks.h  bitboard.h  coordinates.h  main.cpp
src/: .gitignore  CMakeLists.txt  Makefile  SEE_o.cpp  SEE_o.h  chess.hpp  consts.h  datagen.cpp  datagen.h  game.pgn  helper.cpp  helper.h  history.cpp  history.h  moveorder.cpp  moveorder.h  nnue.h  schoenemann.cpp  schoenemann.h  search.cpp  search.h  search_fwd.h  see.cpp  see.h  see_o.cpp  see_o.h  tests.cpp  tests.h  time.cpp  time.h  timeman.cpp  timeman.h  tt.cpp  tt.h  tunables.h  tune.cpp  tune.h  tuneconsts.cpp
src/NNUE/: accumulator.h  incbin.h  nnue.cpp  nnue.h  nnueconstants.h  nnueconsts.h  perspective.h  utils.h
